--- a/August0802/src/main/res/values/strings.xml
+++ b/August0802/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">悦乎0802</string>
+    <string name="app_name">悦乎</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
