--- a/August0802/src/main/res/values/strings.xml
+++ b/August0802/src/main/res/values/strings.xml
@@ -3,23 +3,30 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <!--main right toolbar menu-->
-    <string name="action_settings">Settings</string>
-    <string name="action_abouts">Abouts</string>
-    <string name="action_details">Details</string>
-    <string name="action_features">Features</string>
-    <string name="action_updates">Updates</string>
+    <!--main activity toolbar menu-->
+    <string name="action_setting">设置</string>
+    <string name="action_about">关于</string>
+    <string name="action_share">分享</string>
+    <string name="action_update">更新</string>
+
+    <!--picture toolbar menu-->
+    <string name="picture_save">本地保存</string>
+    <string name="picture_share">分享图片</string>
+    <string name="picture_favorite">收藏图片</string>
+    <string name="picture_edit">编辑图片</string>
+
+    <!--passage activity menu-->
+    <string name="passage_comments">获取评论数量</string>
+    <string name="passage_open_in_browser">在浏览器打开</string>
+    <string name="passage_favorite">添加到收藏夹</string>
+    <string name="share_message">分享自 悦乎 </string>
+    <string name="share_to">分享到</string>
+    <string name="wrong_process">发生了一些错误</string>
+
 
     <!--check network state-->
     <string name="please_check_network">请检查网络是否连接</string>
 
     <!--RecyclerView on load more-->
     <string name="dialog_loading">玩命加载中</string>
-
-    <!--DailyActivity-->
-    <string name="action_comments">获取评论数量</string>
-    <string name="action_open_in_browser">在浏览器打开</string>
-    <string name="share_message">分享自 悦乎 </string>
-    <string name="share_to">分享到</string>
-    <string name="wrong_process">发生了一些错误</string>
 </resources>
